--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-
+/* Ndako Book Styles */
 body { 
 
     font-family: BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif; 
